[package]
name = "chambers"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { version = "*" }
anyhow = "1.0"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
